--- a/css/style.css
+++ b/css/style.css
@@ -141,15 +141,17 @@ html {
 }
 
 .btn-full:hover,
-.btn-ghost:hover{
+.btn-ghost:hover {
     transform: translateY(-3px);
-    box-shadow: 2px 7px 10px 10px rgba(29, 5, 0, 0.7) ;
+    box-shadow: 2px 7px 10px 10px rgba(29, 5, 0, 0.7);
 }
+
 .btn-full:active,
-.btn-ghost:active{
+.btn-ghost:active {
     transform: translateY(3px);
-    box-shadow: 2px 5px 7px 7px rgba(29, 5, 0, 0.3) ;
+    box-shadow: 2px 5px 7px 7px rgba(29, 5, 0, 0.3);
 }
+
 /*--------------------------------------------------------*/
 /*------------------------NAVBAR--------------------------*/
 /*--------------------------------------------------------*/
@@ -287,11 +289,63 @@ html {
     .sidebar {
         display: none;
     }
+
+    /*----------------------------------------------------------------*/
+    /*------------------------DROP-DOWN MENU--------------------------*/
+    /*----------------------------------------------------------------*/
+    .dropdown-content {
+        position: relative;
+    }
+
+    .dropdown-options {
+        position: absolute;
+        right: 20px;
+        top: 0px;
+        border-radius: 3px;
+        text-decoration: none;
+        color: var(--white-color);
+        width: 230px;
+        transition: height 0.5s ease-in-out;
+        display: none;
+    }
+
+    .dropdown-options li {
+        list-style: none;
+        padding: 13px 15px;
+        background-color: var(--base-color);
+
+    }
+
+    .dropdown-options li i {
+        margin-right: 10px;
+    }
+
+    .dropdown-options li:hover {
+        background-color: var(--base-color-dark);
+        border-left: 5px solid var(--secondary-color);
+        transition: background-color 0.3s, border-left-width 0.5s;
+    }
+
+    .navbar-dropdown {
+        padding: 0px 10px;
+    }
 }
 
 /*media queries */
 @media only screen and (max-width: 1010px) {
     .menu {
+        display: none;
+    }
+
+    .navbar-dropdown {
+        display: none;
+    }
+
+    .dropdown-options {
+        display: none;
+    }
+
+    .dropdown-content {
         display: none;
     }
 
@@ -477,46 +531,6 @@ html {
     color: var(--white-color);
 }
 
-
-/*----------------------------------------------------------------*/
-/*------------------------DROP-DOWN MENU--------------------------*/
-/*----------------------------------------------------------------*/
-
-.dropdown-content {
-    position: relative;
-}
-
-.dropdown-options {
-    position: absolute;
-    right: 20px;
-    top: 0px;
-    border-radius: 3px;
-    text-decoration: none;
-    color: var(--white-color);
-    background-color: var(--base-color);
-    width: 230px;
-    transition: height 0.5s;
-}
-
-.dropdown-options li {
-    list-style: none;
-    padding: 13px 15px;
-}
-
-.dropdown-options li i {
-    margin-right: 10px;
-}
-
-.dropdown-options li:hover {
-    background-color: var(--base-color-dark);
-    border-left: 5px solid var(--secondary-color);
-    transition: background-color 0.3s, border-left-width 0.5s;
-}
-
-.navbar-dropdown {
-    display: none;
-    padding: 0px 10px;
-}
 
 /*----------------------------------------------------------------*/
 /*------------------------FEATURES SECTION--------------------------*/
@@ -707,9 +721,11 @@ html {
 .quality p {
     width: 100%;
 }
-.btn-app{
+
+.btn-app {
     text-decoration: none;
 }
+
 .btn-app img {
     height: 70px;
     margin-right: 10px;
@@ -733,26 +749,30 @@ html {
     .app-screen {
         width: 400px;
     }
-    .btn-app{
+
+    .btn-app {
         display: block;
         text-align: center;
     }
+
     .btn-app img {
         height: 100px;
         margin: auto auto 20px auto;
     }
 }
 
-@media only screen and (max-width: 1090px) and (min-width: 900px){
+@media only screen and (max-width: 1090px) and (min-width: 900px) {
     .btn-app img {
         height: 60px;
         margin: 0px auto 0px auto;
     }
+
     .quality-box:last-child {
         padding-left: 3%;
         margin-top: 50px;
     }
 }
+
 @media only screen and (max-width: 600px) {
     .section-favourite-meals li {
         display: inline-block;
@@ -786,24 +806,24 @@ html {
 
 /*Animations*/
 @keyframes fadeIn {
-    0%{
+    0% {
         opacity: 0;
     }
-    100%{
+    100% {
         opacity: 1;
     }
 }
 
 @keyframes fadeInMOverFromRight {
-    0%{
+    0% {
         transform: translateX(200px);
         opacity: 0;
     }
-    80%{
+    80% {
         opacity: 0.8;
         transform: translateX(-30px);
     }
-    100%{
+    100% {
         transform: translateX(0px);
         opacity: 1;
     }
@@ -811,15 +831,15 @@ html {
 
 
 @keyframes fadeInMOverFromBottom {
-    0%{
+    0% {
         transform: translateY(100px);
         opacity: 0;
     }
-    80%{
+    80% {
         opacity: 0.8;
         transform: translateY(-10px);
     }
-    100%{
+    100% {
         opacity: 1;
     }
 }
