--- a/css/style.css
+++ b/css/style.css
@@ -67,10 +67,12 @@ html {
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+
 .heading-2,
-.heading-3{
+.heading-3 {
     text-align: center;
 }
+
 /*--------------------------------------------------------*/
 /*------------------------HEADER--------------------------*/
 /*--------------------------------------------------------*/
@@ -802,8 +804,67 @@ html {
     box-shadow: 1px 9px 20px 9px rgba(29, 5, 0, 0.1);
 }
 
-/*Gallery Media Queries*/
+/*--------------------------------------------------------*/
+/*------------------------ Cities Section --------------------------*/
+/*--------------------------------------------------------*/
+.city{
+    margin-right: 10px;
+ }
+.city h3{
+    margin-bottom: 10px;
+}
+.city-feature{
+    text-align: left;
+    margin-bottom: 5px;
+}
 
+.section-cities {
+    margin-bottom: 70px;
+}
+
+.cities {
+    margin-bottom: 60px;
+    margin-top: 50px;
+}
+
+.city-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+.icon-small {
+    color: var(--secondary-color);
+    width: 30px;
+    display: inline-block;
+    text-align: center;
+    font-size: 120%;
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -4px;
+    /*align text and icons*/
+    /*line-height: 120%;*/
+    /*vertical-align: middle;*/
+
+
+
+}
+
+.icon-small:hover {
+color: var(--secondary-color-dark);
+
+}
+
+
+
+
+
+/*--------------------------------------------------------*/
+/*------------------------ Media Queries--------------------------*/
+/*--------------------------------------------------------*/
+
+/*mobile and tab screen */
 @media only screen and (max-width: 900px) and (min-width: 600px) {
     .section-favourite-meals li {
         display: inline-block;
@@ -829,8 +890,23 @@ html {
         height: 100px;
         margin: auto auto 20px auto;
     }
+
+
 }
 
+/*all screen size greater than mobile screen size  */
+@media screen and (max-width: 1200px)and (min-width: 600px) {
+    .section-cities > div > div {
+        width: 42%;
+        margin-left: 5% !important;
+        margin-bottom: 5%;
+    }
+    .city-feature {
+        text-align: center;
+    }
+}
+
+/*tab screen size */
 @media only screen and (max-width: 1090px) and (min-width: 900px) {
     .btn-app img {
         height: 60px;
@@ -843,6 +919,7 @@ html {
     }
 }
 
+/*Mobile screen  */
 @media only screen and (max-width: 600px) {
     .section-favourite-meals li {
         display: grid;
@@ -858,8 +935,18 @@ html {
     .btn-app img {
         height: 58px;
     }
+
+    .section-cities > div > div {
+        width: 90%;
+        margin-left: 5% !important;
+        margin-bottom: 5%;
+    }
+    .city-feature {
+        text-align: center;
+    }
 }
 
+/*mobile screen */
 @media only screen and (max-width: 900px) {
     .section-features div {
         display: inline-block;
@@ -874,6 +961,7 @@ html {
     .section-how-it-works {
         padding-bottom: 0px;
     }
+
 }
 
 
