--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,8 @@ html {
 /*----------------------------------------------------------------*/
 /*------------------------LINKS--------------------------*/
 /*----------------------------------------------------------------*/
-a:link,
-a:visited {
+.link:link,
+.link:visited {
     color: var(--secondary-color);
     text-decoration: none;
     padding-bottom: 1px;
@@ -69,8 +69,8 @@ a:visited {
     transition: all 0.2s ease-in-out;
 }
 
-a:hover,
-a:active {
+.link:hover,
+.link:active {
     color: var(--black-color);
     border-bottom: 1px solid transparent;
     transition: all 0.2s ease-in-out;
